arena/style.css
:root {
    --borderRadiusValue: 0.75vw;
}

head, body {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    font-size: 3vh;
    text-align: center;
    overflow: hidden;
}

header {
    text-align: left;
}

header img {
    height: 50px;
}

header img.aTadSmaller {
    height: 40px;
    margin: 5px;
}

main {
    display: none;
    margin-top: 200px;
    margin-bottom: 10vh;
    margin-left: 15vw;
    margin-right: 15vw;
    min-height: 50vh;
    color: white;
}

button, input, select {
    font-size: 3vh;
}

h1.big {
    font-size: 15vh;
}

.small {
    font-size: 1.5vh;
}

.smallMargin {
    margin: 10px;
}

.largeTopMargin {
    margin-top: 20px;
}

.card {
    border-radius: var(--borderRadiusValue);
}

.card.full {
    height: inherit;
}

.dialog, .dialog * {
    font-size: 16px;
}

.dialogTitle, .dialogContent {
    text-align: left;
}

.bigInput {
    width: calc(100% - 50px);
    font-size: 5vh;
    text-align: center;
}

.side {
    position: absolute;
    display: none;
    top: 75px;
    width: calc(50vw - 20px);
    height: calc(100vh - 75px);
    padding: 10px;
    padding-top: 20px;
    text-align: center;
    color: white;
    overflow: auto;
}

.side.leftSide {
    left: 0;
    background-color: rgba(255, 255, 255, 0.05);
}

.side.rightSide {
    left: 50vw;
    background-color: rgba(255, 255, 255, 0.1);
}

.signInError {
    font-size: 2vh;
}

.enteringCompetitionSides {
    padding-top: 20vh;
    background-color: rgba(107, 41, 239, 0.8)!important;
}

.game {
    position: absolute;
    display: none;
    top: 75px;
    left: 0;
    width: 100vw;
    height: calc(100vh - 75px);
    background-color: black;
}

.game iframe {
    width: 100%;
    height: 100%;
}

.holdingScreen {
    position: absolute;
    display: none;
    top: 75px;
    left: 0;
    width: 100vw;
    height: calc(100vh - 75px);
    padding-top: 20vh;
    background-color: #3e3e3e;
    background-image: url("../media/sfk/background.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-blend-mode: multiply;
    text-align: center;
}

.holdingScreen img {
    height: 40vh;
}

.finishRoundDisplay.glass {
    position: absolute;
    display: none;
    top: 75px;
    left: 0;
    width: 100vw;
    height: calc(100vh - 75px);
}

.finishRoundDisplay.floater {
    position: absolute;
    display: none;
    bottom: 0;
    left: 0;
    width: calc(100vw - 40px);
    padding: 20px;
    background-color: var(--primaryColour);
    color: white;
}

#continueAfterSetup {
    position: absolute;
    display: none;
    bottom: 10px;
    left: 33.3vw;
    width: 33.3vw;
}

#computerNumberReadoutContainer {
    position: absolute;
    top: 0;
    left: 33.3vw;
    width: 33.3vw;
    text-align: center;
    z-index: 1;
}

#computerNumberReadout {
    display: none;
    padding: 5px;
    background-color: black;
    color: white;
    text-align: center;
    border-radius: 5px;
}

#computerNumberFloaterContainer {
    position: absolute;
    display: none;
    bottom: 20px;
    left: calc(33.3vw - 10px);
    width: calc(33.3vw - 10px);
    padding: 20px;
    background-color: var(--primaryColour);
    color: white;
    text-align: center;
    border-radius: var(--borderRadiusValue);
    z-index: 1;
}

#scoreboard {
    display: block!important;
    max-height: 80vh;
    margin-top: 100px;
    margin-left: 10vw;
    margin-right: 10vw;
    overflow: auto;
}

.scoreboardEntry {
    height: 5vh;
    text-align: left;
}

.scoreboardEntry:nth-child(1) {
    background-color: #f2c202;
    color: black;
}

.scoreboardEntry:nth-child(2) {
    background-color: #c4c4c4;
    color: black;
}

.scoreboardEntry:nth-child(3) {
    background-color: #ce7f00;
    color: black;
}

.scoreboardPosition, .scoreboardName, .scoreboardScore {
    font-size: 4vh;
}

.scoreboardPosition, .scoreboardName {
    display: inline-block;
}

.scoreboardPosition {
    width: 75px;
    font-weight: 700;
}

.scoreboardScore {
    float: right;
}

